--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cybercorp.io</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <style>
+        h3 {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Welcome!</h1>
+        <h3>What color am I?</h3>
         <todo-item>Todo Item</todo-item>
     </header>
     <script defer src="assets/js/script.js"></script>
