testing out using web components

--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cybercorp.io</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <style>
-        h3 {
-            color: red;
-        }
-    </style>
 </head>
 <body>
+    <header-nav>Header</header-nav>
     <header>
         <h1>Welcome!</h1>
         <h3>What color am I?</h3>
