header/nav and section prep with web components

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cybercorp.io</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <header-nav>Header</header-nav>
-    <header>
-        <h1>Welcome!</h1>
-        <h3>What color am I?</h3>
-        <todo-item>Todo Item</todo-item>
-    </header>
-    <script defer src="assets/js/script.js"></script>
+    <header-nav></header-nav>
+    <main>
+        <intro-section></intro-section>
+    </main>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
