--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cybercorp.io</title>
+    <link rel="shortcut icon" href="favicon.webp" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
