--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             <a href="#">Contact Us</a>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="section-intro">
+            <img class="steps-svg" src="assets/images/steps-gfx.svg" alt="" />
+            <a href="#"><img class="hero-cta-card" src="/assets/images/hero-cta-card.svg" alt="" /></a>
+        </section>
+    </main>
     <footer></footer>
     <script src="assets/js/script.js" defer></script>
 </body>
