html/css updates, asset upload

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <section class="section-intro">
             <img class="steps-svg" src="assets/images/steps-gfx.svg" alt="" />
             <a href="#"><img class="hero-cta-card" src="assets/images/hero-cta-card.svg" alt="" /></a>
+            <div class="hero-headline-wrapper">
+                <h1>Stay Safe, Stay Secure with Our Expertise</h1>
+                <div class="sub-headline-wrapper">
+                    <a href="#" class="btn-white">Get Started <img src="/assets/images/arrow_outward.svg" alt="Arrow Outward Icon"></a>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
